# culinalg

./: .gitignore  CMakeLists.txt  LICENSE  README.md  culinalg-core.hpp
examples/: vector-addition.cpp
headers/: culinalg-exceptions.hpp  culinalg-vector.hpp  culinalg.hpp
sources/: culinalg-cucore.cu  culinalg-cuheader.cuh  culinalg-object.cuh  culinalg-vector.cu
tests/: test1.cu
